# gotorrent

./: .gitignore  README.md  flake.nix  go.mod  magnet.go  main.go  main_test.go  pyproject.toml  udpTracker.go  udp_traffic.pcap  udp_traffic_python.pcap
cmd/gotorrent/: main.go
internal/tracker/: magnet.go  udpTracker.go
internal/utils/: utils.go
scripts/: capture_net.sh  capture_net_python.sh
src/gotorrent/: __init__.py
test/: main_test.go
