[project]
name = "gotorrent"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Onésime BERNARD", email = "onesime.bernard@ima.it" }
]
dependencies = [
    "requests>=2.32.3",
    "bencode-py>=4.0.0",
    "asyncudp>=0.11.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "pyright>=1.1.378",
    "ruff>=0.6.3",
    "tqdm>=4.66.5",
    "ipykernel>=6.29.5",
]
